Probably should have pushed this a while ago. Fixed some layout issues, tweaked the search bar a bit, something else I can't remember.

--- a/css/terriblename.css
+++ b/css/terriblename.css
@@ -73,9 +73,9 @@ button, input[type=submit] { display: inline-block; padding-bottom: 3px; text-tr
 .md blockquote { border-left: solid 3px #9e9e9e; padding: 0.2em 0.5em; background: whitesmoke; color: #111; margin-left: 0.5em; }
 
 .comment.noncollapsed > .entry { position: relative; background: #fff; padding: 0; display: inline-block; overflow: visible; border-radius: 3px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); }
-.comment.noncollapsed > .entry:before { content: ''; position: absolute; left: -8px; top: 8px; width: 0; height: 0; border-right: solid 8px #fff; border-top: solid 8px transparent; border-bottom: solid 8px transparent; }
+.comment.noncollapsed > .entry:before { content: ''; position: absolute; left: -8px; top: 15px; width: 0; height: 0; border-right: solid 8px #fff; border-top: solid 8px transparent; border-bottom: solid 8px transparent; }
 
-.comment.noncollapsed > .entry .tagline { display: block; padding: 6px 14px 6px 10px; border-bottom: solid 1px #e6e6e6; border-radius: 3px 3px 0 0; }
+.comment.noncollapsed > .entry .tagline { display: block; padding: 6px 14px 6px 10px; min-height: 32px; line-height: 32px; border-bottom: solid 1px #e6e6e6; border-radius: 3px 3px 0 0; }
 
 .comment.noncollapsed > .entry .flat-list.buttons { background: whitesmoke; border-top: solid 1px #e6e6e6; padding: 4px 12px 4px 8px; border-radius: 0 0 3px 3px; }
 .comment.noncollapsed > .entry .flat-list.buttons li a { font-weight: normal; }
@@ -187,7 +187,7 @@ hr { margin: 1.5em 0; }
 
 .flair-kirby-default { min-width: 21px; height: 19px; background-image: url("%%KirbyAnimation%%"); background-position: -209px -0px; }
 
-.flair-kirby-default:hover { min-width: 21px; height: 19px; background-image: url("%%KirbyAnimation%%"); -webkit-animation: kirbyanim-default 0.9s steps(10) infinite; -moz-animation: kirbyanim-default 0.9s steps(10) infinite; -ms-animation: kirbyanim-default 0.9s steps(10) infinite; -o-animation: kirbyanim-default 0.9s steps(10) infinite; animation: kirbyanim-default 0.9s steps(10) infinite; }
+.flair-kirby-default:hover { min-width: 21px; height: 19px; margin-top: 13px; background-image: url("%%KirbyAnimation%%"); -webkit-animation: kirbyanim-default 0.9s steps(10) infinite; -moz-animation: kirbyanim-default 0.9s steps(10) infinite; -ms-animation: kirbyanim-default 0.9s steps(10) infinite; -o-animation: kirbyanim-default 0.9s steps(10) infinite; animation: kirbyanim-default 0.9s steps(10) infinite; }
 
 @-webkit-keyframes kirbyanim-default { from { background-position: 0px -0px; }
   to { background-position: -210px -0px; } }
@@ -337,9 +337,9 @@ ul.report-reasons > li.report-reason { display: list-item; white-space: normal; 
 
 #header { color: #c6c6c6; border-bottom: none; height: 160px; position: relative; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); }
 
-#header-img-a { display: inline-block; vertical-align: middle; margin: 42px 10px 0 10px; }
+#header-img-a { display: inline-block; vertical-align: middle; margin: 42px 10px 0 30px; }
 
-.pagename.redditname a { background: url(%%logo%%) no-repeat; position: absolute; top: 20px; width: 150px; height: 87px; left: 65px; color: transparent; }
+.pagename.redditname a { background: url(%%logo%%) no-repeat; position: absolute; top: 20px; width: 150px; height: 87px; left: 85px; color: transparent; }
 
 #header-bottom-left > .pagename:last-child:after { content: ''; height: 32px; }
 
@@ -410,7 +410,7 @@ span.hover.pagename.redditname { color: transparent; }
 .userattrs .submitter:after { font-size: 13px; content: 'OP'; }
 
 .nsfw-stamp { border: none; margin: 0 4px 0 0; }
-.nsfw-stamp acronym { display: inline-block; font-size: 11px; padding: 0 3px; text-align: center; border: none !important; background: #268bd2; color: #fff; border-radius: 2px; }
+.nsfw-stamp acronym { display: inline-block; font-size: 11px; padding: 0 3px; text-align: center; border: none !important; background: #268bd2; color: #fff; border-radius: 2px; content: "SPOILER"; }
 
 .entry .flat-list.buttons > li.reported-stamp.stamp { position: absolute; top: 6px; right: 10px; border: none !important; color: #fff; padding: 2px 4px; font-variant: small-caps; font-weight: bold; font-size: 13px; line-height: 1em; background: #dc322f; border-radius: 2px; }
 
@@ -469,7 +469,7 @@ span.hover.pagename.redditname { color: transparent; }
 .comment.spam .entry:before { border-right-color: #b8daf2; }
 .comment.spam .entry .tagline { background: #b8daf2; }
 .comment.spam .entry .tagline time:first-of-type:after { content: 'Spam'; display: inline-block; background: #6c71c4; color: #fff; padding: 0 3px; margin: 0 5px; border-radius: 2px; }
-.comment .midcol { position: absolute; width: 23px; top: 3px; left: -3px; }
+.comment .midcol { position: absolute; width: 23px; top: 4px; left: -3px; }
 .comment .child { margin-top: 0; border-left: none; }
 .comment .child > .usertext { margin-left: 20px; }
 .comment .score, .comment.collapsed { font-size: 13px; }
@@ -498,6 +498,8 @@ body .side .md h3 strong a { position: absolute; top: 175px; width: 300px; heigh
 .side .usertext-body .md h3 strong a { font-size: 0; }
 
 .side { background: none; color: #515151; width: 300px; margin: 10px .5em 1em 2em; padding: 300px 5px 0 5px; background-image: url(%%SidebarBackground%%) !important; background-repeat: y; border: 0; border-radius: 10px; }
+
+#search input[type=text] { margin-top: 3px; background-color: #f9ffff; height: 30px; width: 300px; padding-left: 38px; background-position: bottom left; background-image: url(%%SearchButton%%); background-repeat: no-repeat; }
 
 .titlebox { margin-top: 20px; }
 .titlebox .word { display: none; }
