--- a/scss/_comments.scss
+++ b/scss/_comments.scss
@@ -120,7 +120,7 @@
   .midcol {
     position: absolute;
     width: 23px;
-    top: 3px;
+    top: 4px;
     left: -3px;
   }
 
