--- a/scss/_flairs.scss
+++ b/scss/_flairs.scss
@@ -33,11 +33,12 @@
 	.flair-kirby-#{$animname}:hover {
 		min-width: 21px;
 		height: 19px;
+		margin-top: 13px;
 		background-image: url("%%KirbyAnimation%%");
-	    -webkit-animation: kirbyanim-#{$animname} .9s steps(10) infinite; 
-		-moz-animation: kirbyanim-#{$animname} .9s steps(10) infinite; 
-		-ms-animation: kirbyanim-#{$animname} .9s steps(10) infinite; 
-		-o-animation: kirbyanim-#{$animname} .9s steps(10) infinite; 
+	  -webkit-animation: kirbyanim-#{$animname} .9s steps(10) infinite;
+		-moz-animation: kirbyanim-#{$animname} .9s steps(10) infinite;
+		-ms-animation: kirbyanim-#{$animname} .9s steps(10) infinite;
+		-o-animation: kirbyanim-#{$animname} .9s steps(10) infinite;
 		animation: kirbyanim-#{$animname} .9s steps(10) infinite;
 	}
 
@@ -97,21 +98,18 @@
 
 @include kirby-anim(0,   "default");
 
-@if env(STYLE) != compact {
-/* Too dang big. Figure out what to do with this later.
-@include kirby-anim(19,  "yellow");
-@include kirby-anim(38,  "red");
-@include kirby-anim(57,  "green");
-@include kirby-anim(76,  "snow");
-@include kirby-anim(95,  "carbon");
-@include kirby-anim(114, "ocean");
-@include kirby-anim(133, "sapphire");
-@include kirby-anim(152, "grape");
-@include kirby-anim(171, "emerald");
-@include kirby-anim(190, "orange");
-@include kirby-anim(209, "chocolate");
-@include kirby-anim(228, "cherry");
-@include kirby-anim(247, "chalk");
-@include kirby-anim(266, "mirror");
-*/
-}
+// Too dang big. Figure out what to do with this later.
+//@include kirby-anim(19,  "yellow");
+//@include kirby-anim(38,  "red");
+//@include kirby-anim(57,  "green");
+//@include kirby-anim(76,  "snow");
+//@include kirby-anim(95,  "carbon");
+//@include kirby-anim(114, "ocean");
+//@include kirby-anim(133, "sapphire");
+//@include kirby-anim(152, "grape");
+//@include kirby-anim(171, "emerald");
+//@include kirby-anim(190, "orange");
+//@include kirby-anim(209, "chocolate");
+//@include kirby-anim(228, "cherry");
+//@include kirby-anim(247, "chalk");
+//@include kirby-anim(266, "mirror");
