--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,7 +10,7 @@
 #header-img-a {
   display: inline-block;
   vertical-align: middle;
-  margin: 42px 10px 0 10px;
+  margin: 42px 10px 0 30px;
 }
 
 .pagename.redditname a {
@@ -19,7 +19,7 @@
       top: 20px;
       width: 150px;
       height: 87px;
-      left: 65px;
+      left: 85px;
       color: transparent;
 }
 
